@@ -1,6 +1,6 @@
-# Copyright 1999-2011 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kmahjongg/kmahjongg-4.7.4.ebuild,v 1.1 2011/12/11 18:52:26 alexxy Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kmahjongg/kmahjongg-4.7.4.ebuild,v 1.2 2012/01/09 16:50:51 phajdan.jr Exp $
 
 EAPI=4
 
@@ -9,7 +9,7 @@ KMNAME="kdegames"
 inherit kde4-meta
 
 DESCRIPTION="Mahjongg for KDE"
-KEYWORDS="~amd64 ~ppc ~ppc64 ~x86 ~amd64-linux ~x86-linux"
+KEYWORDS="~amd64 ~ppc ~ppc64 x86 ~amd64-linux ~x86-linux"
 IUSE="debug"
 
 DEPEND="
